Setting up postcss!
Making it easy to copy/paste new boards

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Tak board demo</title>
 		<link rel="stylesheet" href="demo-style.css">
-		<link rel="stylesheet" href="board-style.css">
+		<link rel="stylesheet" href="build.css">
 	</head>
 	<body>
-		<div id="board"></div>
+		<div id="board-1" class="board-container tak-board-1"></div>
 		<script src="build.js"></script>
 	</body>
 </html>
