Showing icons for standing/capstones
Also added variables to the CSS for handymaking

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="build.css">
 	</head>
 	<body>
-		<div id="board-1" class="board-container tak-board-1"></div>
+		<div id="tak-board-1" class="board-container tak-board-1"></div>
 		<script src="build.js"></script>
 	</body>
 </html>
