--- a/board-1.html
+++ b/board-1.html
@@ -3,14 +3,23 @@
 	{{#y:i}}
 	<div class="display-table-row tak-row {{i % 2 ? 'even' : 'odd'}}">
 		{{# .:j}}
-		<div class="display-table-cell tak-square {{topIsStanding ? 'standing' : ''}} {{j % 2 ? 'even' : 'odd'}}">
+		<div class="display-table-cell tak-square {{topIsStanding ? 'standing' : ''}} {{j % 2 ? 'even' : 'odd'}}" style="position: relative;">
+			{{#topIsStanding}}
+				<div class="piece-topper-border square-border"></div>
+				<div class="piece-topper square owned-by-{{squareOwner(pieces)}}"></div>
+			{{/}}
+			{{#pieces.length > 0 && squareOwner(pieces).toUpperCase() === pieces[pieces.length - 1]}}
+				<div class="piece-topper-border circle-border"></div>
+				<div class="piece-topper circle owned-by-{{squareOwner(pieces)}}"></div>
+			{{/}}
+
 			<div class="width-height-100 display-table">
 				<div class="square-empty-space"></div>
 				<div class="display-table-footer-group square-pieces">
 					{{#pieces.slice().reverse():stackPosition}}
 					{{# {piece:.} }}
 					<div class="tak-piece owned-by-{{piece.toLowerCase()}}">
-						{{piece}}
+						&nbsp;
 					</div>
 					{{/}}
 					{{/}}
