--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div id="tak-board-1" class="board-container tak-board-1"></div>
+		<div id="tak-board-1b" class="board-container tak-board-1"></div>
 		<script src="build.js"></script>
 	</body>
 </html>
