--- a/board-1.html
+++ b/board-1.html
@@ -6,11 +6,11 @@
 		<div class="display-table-cell tak-square {{topIsStanding ? 'standing' : ''}} {{j % 2 ? 'even' : 'odd'}} owned-by-{{squareOwner(pieces)}}" style="position: relative;">
 			{{#topIsStanding}}
 				<div class="piece-topper-border square-border"></div>
-				<div class="piece-topper square owned-by-{{squareOwner(pieces)}}"></div>
+				<div class="piece-topper square owned-by-{{squareOwner(pieces)}}"><div class="transparent width-height-100"></div></div>
 			{{/}}
 			{{#pieces.length > 0 && squareOwner(pieces).toUpperCase() === pieces[pieces.length - 1]}}
 				<div class="piece-topper-border circle-border"></div>
-				<div class="piece-topper circle owned-by-{{squareOwner(pieces)}}"></div>
+				<div class="piece-topper circle owned-by-{{squareOwner(pieces)}}"><div class="transparent width-height-100"></div></div>
 			{{/}}
 
 			<div class="width-height-100 piece-holder row-count-{{pieces.length}} {{atLeastClasses(pieces)}}">
