--- a/board-1.html
+++ b/board-1.html
@@ -1,9 +1,20 @@
 {{#boardState}}
-<div class="display-table tak-board width-height-100 size-{{size}}">
-	{{#y:i}}
-	<div class="display-table-row tak-row {{i % 2 ? 'even' : 'odd'}}">
-		{{# .:j}}
-		<div class="display-table-cell tak-square {{topIsStanding ? 'standing' : ''}} {{j % 2 ? 'even' : 'odd'}} owned-by-{{squareOwner(pieces)}}" style="position: relative;">
+<div class="display-table tak-board-1 width-height-100 size-{{size}}">
+	{{#y:y}}
+	<div class="display-table-row tak-row {{y % 2 ? 'even' : 'odd'}}">
+		{{# .:x}}
+		<div class="display-table-cell
+		tak-square
+		{{topIsStanding ? 'standing' : ''}}
+		{{x % 2 ? 'even' : 'odd'}}
+		owned-by-{{squareOwner(pieces)}}
+		x-{{x}}
+		y-{{y}}
+		{{highlight[x + '-' + y] ? 'highlight' : ''}}
+		{{canClick[x + '-' + y] ? 'can-click' : ''}}"
+		style="position: relative;"
+		on-click="fire(canClick[x + '-' + y] ? 'click' : null, { x: x, y: y })"
+		on-mouseover="fire('hover', { x: x, y: y })">
 			{{#topIsStanding}}
 				<div class="piece-topper-border square-border"></div>
 				<div class="piece-topper square owned-by-{{squareOwner(pieces)}}"><div class="transparent width-height-100"></div></div>
